# 0x0.st

./: Cargo.toml  README.md  install.sh
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  rust.yml
src/: main.rs
