[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "*", features = ["derive"] }
clap_complete = "4.0.6"
colored = { version = "*" }
reqwest = { version = "*", features = ["json", "blocking", "multipart"] }
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics"] }
