[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
clap_complete = "4.1.0"
colored = { version = "2.0.0" }
reqwest = { version = "0.11.13", features = ["json", "blocking", "multipart"] }
